Fixes wrapping issue for long club names.

--- a/sites/all/modules/dosomething/features/dosomething_clubs/css/clubs_page.css
+++ b/sites/all/modules/dosomething/features/dosomething_clubs/css/clubs_page.css
@@ -101,7 +101,7 @@ div.counter ul li:nth-child(2) {
   text-align: center; }
 
 div.school-name {
-  width: 500px;
+  width: 400px;
   margin-top: -15px; }
 
 p.club-blurb {
